fixed alignment of dashboard buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -131,7 +131,8 @@ a.btn.btn-light {
 }
 
 .search-bar {
-  margin-bottom: 5px!important;
+  margin-bottom: 5px !important;
+  padding: 0.5rem 1rem;
 }
 
 .nav-links {
@@ -163,7 +164,7 @@ a.btn.btn-light {
   margin: 2rem 2rem 0rem 2rem;
   justify-content: center;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(330px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: .5rem;
 }
 
@@ -355,7 +356,7 @@ a.btn.btn-light {
   clear: both;
   width: 100%;
   height: 100%;
-  padding: 1.5rem;
+  padding: 1rem;
 }
 
 .btn-container {
@@ -382,7 +383,6 @@ a.btn.btn-light {
 }
 
 .dash-btn {
-  margin-right: 1rem;
   min-height: 5rem;
   position: relative;
   background-size: cover;
@@ -533,9 +533,17 @@ TABLET + DESKTOP
   }
 
   /* DASHBOARD */
+  .fav-btn {
+    margin-right: 2rem;
+  }
+
   .dash-btn {
     width: 25rem;
     height: 20rem;
+  }
+
+  .dashboard-container {
+    padding: 3rem;
   }
 
   /* BUTTONS */
